# Master-s

./: .gitignore
Assignment1/CP8319_assignment1/: Assignment1.tex  README.md
Assignment1/CP8319_assignment1/src/: vi_and_pi.py
Assignment1/__MACOSX/cps803_Assignment1/: ._README.md  ._environment.yml
Assignment1/__MACOSX/cps803_Assignment1/src/: ._featuremaps
Assignment1/cps803_Assignment1/: README.md  environment.yml
Assignment1/cps803_Assignment1/src/featuremaps/: featuremap.py  small.csv
Assignment1/cps803_Assignment1/src/posonly/: posonly.py  posonly_adjusted_pred.txt  posonly_naive_pred.txt  posonly_true_pred.txt
Assignment2/__MACOSX/cps803_Assignment2/: ._README.md  ._environment.yml  ._src
Assignment2/cps803_Assignment2/: Assignment2.tex  README.md
Assignment2/cps824_assignment2/: A2.tex
Assignment2/cps824_assignment2/src/: frozen_lake.py  lake_envs.py  mc_td_and_qlearning.py
Assignment3/: ASsignment3.tex  Step6.png~
Assignment3/cps803_Assignment3/: README.md
Assignment3/cps803_Assignment3/src/: Asignment3.tex
Project/: Bibliography.bib  Boid.cpp  Boid.hpp  CMakeLists.txt  Comparison.cpp  DialatedNumber.cpp  DialatedNumber.hpp  NDObject.cpp  NDObject.hpp  Project.tex  QuadTree.cpp  QuadTree.hpp  README.md  Report.bib  Report.tex  Tree.cpp  Tree.hpp
Project/code/: CustomData.py  NetTest.py  Network.py  images.csv
Project/code/UNet/: test.py
Project/src/: q2_schedule.py  q3_linear_torch.py  q4_nature_torch.py  requirements.txt
Project/src/core/: deep_q_learning_torch.py
Project/src/optional_yaml/: cps824-torch-windows.yml
(+26 files in other folders)
